hard-gists/c5af642cf217971d93f499e8f70fcb72/run.log
=== Docker Run Log for c5af642cf217971d93f499e8f70fcb72 ===
Started at: Mi 29. Okt 19:53:34 CET 2025

[2025-10-29 19:53:35] START: Running container for c5af642cf217971d93f499e8f70fcb72
[2025-10-29 19:53:35] SUCCESS: Container 8739655e070da25463c1a96bae2c181a068c174a156d6d0b810d4a054c2cac1d started for c5af642cf217971d93f499e8f70fcb72
=== Container logs for c5af642cf217971d93f499e8f70fcb72 ===
  File "/snippet.py", line 197
    print 'epoch', e, 'cost', np.mean(errs), 'Accuracy', acc
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c5af642cf217971d93f499e8f70fcb72 ===
[2025-10-29 19:53:37] INFO: Container 8739655e070da25463c1a96bae2c181a068c174a156d6d0b810d4a054c2cac1d has stopped
